<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="launch_vote">发起投票</string>
    <string name="quit">退出软件</string>
    <string name="vote_name">投票名称:</string>
    <string name="is_secret">是否记名:</string>
    <string name="record_name">记名</string>
    <string name="not_record_name">不记名</string>
    <string name="option_num">可选数目:</string>
    <string name="back">上一步</string>
    <string name="confirm_launch">确认发起</string>
    <string name="next">下一步</string>
    <string name="vote_setup">投票设置</string>

</resources>
